--- a/anzeige.html
+++ b/anzeige.html
@@ -6,28 +6,10 @@
   <style>
     body { font-family: sans-serif; text-align: center; background: #222; color: #fff; }
     table { border-collapse: separate; border-spacing: 0; border-radius: 20px; overflow: hidden; margin: 30px auto; font-size: 48px; }
-    td, th {
-      border: 1px solid #333; 
-      width: 200px; height: 90px; 
-      text-align: center; padding: 10px;
-      font-weight: bold;
-    }
+    td, th { border: 1px solid #333; width: 200px; height: 90px; text-align: center; padding: 10px; font-weight: bold; }
     th { background: #131313; color: #e6ea6b; font-size: 28px; }
-    .scoreboard {
-      display: flex;
-      justify-content: center;
-      gap: 40px;
-      margin-top: 20px;
-    }
-    .player-box {
-      background: #333;
-      padding: 20px 30px;
-      border-radius: 15px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.6);
-      min-width: 180px;
-      text-align: center;
-      transition: transform 0.2s;
-    }
+    .scoreboard { display: flex; justify-content: center; gap: 40px; margin-top: 20px; }
+    .player-box { background: #333; padding: 20px 30px; border-radius: 15px; box-shadow: 0 4px 10px rgba(0,0,0,0.6); min-width: 180px; text-align: center; transition: transform 0.2s; }
     .player-box:hover { transform: scale(1.05); }
     #p1-box { background: #512e74; }
     #p2-box { background: #9c1f1f; }
@@ -39,6 +21,7 @@
 
 <div id="game">
   <table id="quizTable"></table>
+
   <div class="scoreboard">
     <div class="player-box" id="p1-box">
       <div class="player-name" id="p1name"></div>
@@ -51,7 +34,7 @@
   </div>
 </div>
 
-<script src="questions.js"></script>
+<script src="questions_rap.js"></script>
 <script>
 function getMultiplier() {
   return parseInt(localStorage.getItem("multiplier") || "1");
@@ -95,17 +78,20 @@ function buildTable() {
     table.innerHTML += row;
   }
 
+  // Spielername und Score aktualisieren
   document.getElementById("p1name").textContent = localStorage.getItem("player1name") || "Spieler 1";
   document.getElementById("p2name").textContent = localStorage.getItem("player2name") || "Spieler 2";
   document.getElementById("score1").textContent = localStorage.getItem("score1") || 0;
   document.getElementById("score2").textContent = localStorage.getItem("score2") || 0;
 }
 
-// Reagiere auf Storage-Events
-window.addEventListener("storage", e=>{
+// Storage-Events
+window.addEventListener("storage", e => {
   if(e.key==="score1") document.getElementById("score1").textContent = e.newValue;
   if(e.key==="score2") document.getElementById("score2").textContent = e.newValue;
   if(e.key.startsWith("cell-") || e.key==="multiplier") buildTable();
+  if(e.key==="player1name") document.getElementById("p1name").textContent = e.newValue;
+  if(e.key==="player2name") document.getElementById("p2name").textContent = e.newValue;
 });
 
 window.onload = buildTable;
